Refactor code and enhance maintainability.